#
project(YouMeIM)

cmake_minimum_required(VERSION 2.8)

SET (CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/build/CMakeModules/;${CMAKE_MODULE_PATH}")


set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../bin)

INCLUDE (globalsetting)

IF(__ANDROID__)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/Android/${CMAKE_BUILD_TYPE})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/Android/${CMAKE_BUILD_TYPE})
	ADD_DEFINITIONS(-DOS_ANDROID)
ELSEIF (WIN32) 
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/WIN32/${CMAKE_BUILD_TYPE})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/WIN32/${CMAKE_BUILD_TYPE})
	ADD_DEFINITIONS(-DOS_WIN32)
ELSEIF (__OSX__)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/MAC/${CMAKE_BUILD_TYPE})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/MAC/${CMAKE_BUILD_TYPE})
	ADD_DEFINITIONS(-DOS_OSX)
ELSEIF (__IOS__)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/IOS/${CMAKE_BUILD_TYPE})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/IOS/${CMAKE_BUILD_TYPE})
	ADD_DEFINITIONS(-DOS_IOS)
ELSEIF (__IOSSIMULATOR__)
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/IOSSIMULATOR/${CMAKE_BUILD_TYPE})
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/../lib/IOSSIMULATOR/${CMAKE_BUILD_TYPE})
	ADD_DEFINITIONS(-DOS_IOSSIMULATOR)
ENDIF(__ANDROID__)


add_subdirectory(src/YouMeCommon)
add_subdirectory(src/YouMeIMEngine)

add_subdirectory(src/Test)






